# pyfas

./: CITATION.cff  LICENSE  PFASs.xlsx  README.md  example_notebook.ipynb  fit_molecular_diffusion.py  pyproject.toml  pyrightconfig.json  setup.cfg
src/pyfas/: __init__.py  _typing.py  air_water_adsorption.py  api.py  constants.py  data.py  pfas.py  registry.py  simulation.py  soil.py  solid_phase_adsorption.py  units.py
