[metadata]
name = pyfas
version = 0.0.1
author = Hugo Lapre
description = PyFAS - a PFAS modelling package
long_description = file: README.md

[options]
python_requires = >=3.9, <4
install_requires =
    pfas_leach_screening
    pint
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src
